# refiner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-release.yml
artifacts/: hot3d-vggt-world-aoe-fixes-logbook.jsonl  hot3d-vggt-world-aoe-fixes-logbook.md  hot3d-vggt-world-aoe-fixes-summary.json  hot3d_vggt_world_aoe_fixes.py
benchmark/: parquet_pushdown_strategy_benchmark.py  parquet_reader_backend_benchmark.py  split_block_by_shard_bench.py
benchmark/lerobot/: README.md  run_delete_benchmark.py  run_libero_hdf5_benchmark.py  run_merge_benchmark.py
benchmark/rerun/: README.md  compare_results.py  refresh_aws_secrets.py  run_cleanup_benchmark.py  run_cloud_benchmark.py  run_local_benchmark.py
docs/: auth.md  cli-auth.md  cli.md  egocentric-robotics.md  expression-transforms.md  expressions.md  home.md  in-process-debugging.md  index.md  inference.md  launchers.md  local-execution.md  nav.md  observability.md  pipeline-basics.md  quickstart.md  readers-and-sharding.md  reading-and-writing.md  robotics.md  robotics_conversion.md  runtime-architecture-audit.md  sarm.md  task-pipelines.md  transforms.md  worker-runtime.md
docs/cli/: auth-and-run.md  index.md  jobs-logs-and-metrics.md  secrets.md
docs/episode-data/: converting-to-robot-rows.md  episode-rows.md  frames-and-videos.md  index.md  metadata-tasks-and-stats.md
docs/episode-operations/: egocentric-hand-tracking.md  hand-tracking.md  index.md  motion-trimming.md  reward-scoring.md  subtask-annotation.md
docs/examples/: aloha-hdf5.md  annotate-subtasks.md  cloud-gpu-job.md  index.md  libero-hdf5.md  libero-rlds.md  mcap-franka.md  merge-lerobot-datasets.md  reward-models.md  robomimic-hdf5.md  score-rewards.md  subtask-annotations.md  zarr-replay-buffer.md
docs/inference/: generate-text.md  index.md  inference_providers.md  multimodal-and-structured-output.md  pooling.md  providers-and-vllm.md
docs/platform/: billing.md  cloud-jobs-and-files.md  environment-variables.md  index.md  manifests.md  secrets-and-environment.md  services.md  submitting-to-the-platform.md  viewer.md  workspaces-and-api-keys.md
docs/reading-data/: custom-readers.md  files-and-videos.md  hdf5.md  hugging-face.md  index.md  lerobot.md  mcap.md  reader-model.md  rerun.md  sharding.md  tabular-files.md  tensorflow.md  zarr.md
docs/reference/: index.md  optional-dependencies.md  path-formats.md
docs/running-pipelines/: cloud-launcher.md  in-process-debugging.md  index.md  local-launcher.md  observability.md  resources-gpus-and-services.md
docs/transforms/: async-and-batch-transforms.md  expressions.md  index.md  row-transforms.md  schemas-and-dtypes.md  vectorized-transforms.md
docs/writing-data/: index.md  lerobot.md  media-assets-and-reducers.md  parquet-and-jsonl.md  rerun.md  writer-model.md  zarr.md
examples/: cloud_launcher_demo.py  docling_issues_ocr.py  egocentric_hand_tracking_lerobot.py  hand_tracking.py  hand_tracking_lerobot.py  inference_dummy.py  inference_endpoint.py  inference_vllm.py  lerobot_reader_demo.py  local_launcher_demo.py  local_launcher_worker0_crash_demo.py  local_log_stream.py  ocr_dots_pdf.py  ui_visibility_demo.py
examples/egocentric/: convert_hawor_weights_to_safetensors.py  hawor_cloud_inline.py  hawor_cloud_official_inline.py  hawor_cloud_to_hf.py  hawor_refiner_export.py  hot3d_temporal_filter_scoring.py  install_hawor_official_runtime.sh  install_hawor_runtime.sh  install_megasam_runtime.sh  install_vggt_omega_runtime.sh  megasam_cloud_inline.py  megasam_refiner_export.py  modal_hot3d_sandbox.py  patch_hawor_safetensors_native.py  pcie_hot3d_adapter.py  vggt_hawor_cloud_inline.py  vggt_omega_refiner_export.py
examples/gpu/: cloud_gpu_job.py  verify_visible_gpus.py
examples/inference/: anthropic_image_descriptions.py  gemini_image_descriptions.py  inference_endpoint.py  inference_service.py  openai_image_descriptions.py
examples/lerobot/: libero_hdf5.py  libero_rlds.py  merging.py  motion_trim.py  robometer_reward.py  sarm_annotation.py  sarm_single_stage.py  subtask_annotation.py
examples/robotics/: homer_subtask_annotation_tmp.py  libero_hdf5.py  merging.py  motion_trim.py  robometer_reward.py  subtask_annotation.py  subtask_annotation_secrets.py
notebooks/: local_launcher_demo.py
src/forklift/: __init__.py  pipeline.py  step.py
src/refiner/: __init__.py  expressions.py  hydration.py  job_urls.py  lerobot.py  metrics.py  pipeline.py  redaction.py  run.py  step.py  video.py  worker.py
tests/: conftest.py  test_cache.py  test_commoncrawl_text.py  test_expressions.py  test_hydration.py  test_imports.py  test_inference.py  test_inference_rate_limit.py  test_lerobot_convert.py  test_ocr_dots_pdf_example.py  test_optional_dependencies.py  test_pipeline_local_mode.py  test_row.py  test_video_decode.py  test_video_frame_array.py  test_worker_fusion.py
tests/benchmark/: test_compare_results.py
tests/cli/: test_auth_commands.py  test_cloud_run.py  test_job_commands.py  test_main.py  test_run_command.py  test_run_modes.py  test_secrets_commands.py
tests/execution/: test_async_row.py  test_async_runtime.py  test_async_window.py  test_shards.py
tests/inference/: _helpers.py  test_anthropic_provider.py  test_generate_pooling.py  test_generate_text.py  test_generate_text_options.py  test_google_provider.py  test_media.py  test_metrics.py  (+5 more)
(+454 files in other folders)
