[project]
name = "macrodata-refiner"
version = "0.2.2"
description = "Refiner by Macrodata Labs, a data processing framework for Machine Learning large scale datasets"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Macrodata Labs" }
]
requires-python = ">=3.10"
dependencies = [
    "cloudpickle==3.1.2",
    "fsspec",
    "httpx",
    "loguru",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-sdk",
    "numpy",
    "psutil",
    "orjson",
    "pyarrow",
    "msgspec>=0.20.0",
]

[project.optional-dependencies]
video = [
    "av",
]
robotics = [
    "macrodata-refiner[video]",
    "huggingface-hub>=1.4.1",
    "hf>=1.7.1",
]
text = [
    "warcio",
]
s3 = [
    "s3fs",
]
testing = [
    "macrodata-refiner[robotics]",
    "macrodata-refiner[text]",
    "macrodata-refiner[s3]",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
all = [
    "macrodata-refiner[testing]",
]

[project.scripts]
macrodata = "refiner.cli.main:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refiner = ["py.typed"]

[dependency-groups]
dev = [
    "macrodata-refiner[all]",
    "pre-commit>=4.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty]
[tool.ty.terminal]
error-on-warning = false
output-format = "concise"
