[project]
name = "macrodata-refiner"
version = "0.3.0"
description = "Refiner by Macrodata Labs, a data processing framework for Machine Learning large scale datasets"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Macrodata Labs" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "cloudpickle==3.1.2",
    "fsspec[http]",
    "httpx",
    "loguru",
    "numpy",
    "orjson",
    "packaging",
    "pyarrow",
    "msgspec>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
video = [
    "av",
    "pillow",
]
hf = [
    "datasets>=3.0.0",
    "huggingface-hub>=1.4.1",
    "hf>=1.7.1",
]
hand_tracking = [
    "macrodata-refiner[hf]",
    "macrodata-refiner[video]",
    "ego-vision[models]>=0.1.25",
]
text = [
    "warcio",
]
hdf5 = [
    "h5py",
]
zarr = [
    "zarr>=2.18,<3",
    "numcodecs<0.16",
]
mcap = [
    "av",
    "mcap",
    "mcap-protobuf-support",
    "mcap-ros2-support",
    "pillow",
]
s3 = [
    "s3fs",
]
tensorflow = [
    "tensorflow",
]
tfds = [
    "macrodata-refiner[tensorflow]",
    "tensorflow-datasets",
]
testing = [
    "macrodata-refiner[all]",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
all = [
    "macrodata-refiner[hdf5]",
    "macrodata-refiner[hf]",
    "macrodata-refiner[mcap]",
    "macrodata-refiner[video]",
    "macrodata-refiner[zarr]",
    "macrodata-refiner[text]",
    "macrodata-refiner[s3]",
    "macrodata-refiner[tfds]",
]

[project.scripts]
macrodata = "refiner.cli.main:main"
mdr = "refiner.cli.main:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refiner = ["py.typed"]

[dependency-groups]
dev = [
    "macrodata-refiner[testing]",
    "pre-commit>=4.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty]
[tool.ty.terminal]
error-on-warning = false
output-format = "concise"
